MainProject/MyParser/yaccParser.output
   0  $accept : %entry% $end

   1  add_sym : PLUS
   2          | MINUS

   3  mult_sym : MULT
   4           | DIV

   5  constant : INT
   6           | FLOAT
   7           | STRING
   8           | BOOL

   9  structure : ATOM LPAREN RPAREN
  10            | ATOM LPAREN term_list RPAREN

  11  term_simple : constant
  12              | ATOM
  13              | VAR
  14              | structure

  15  term : term_mult add_sym term
  16       | term_mult

  17  term_mult : term_neg mult_sym term_mult
  18            | term_neg

  19  term_neg : add_sym term_neg
  20           | term_simple

  21  term_list : term
  22            | term COMMA term_list

  23  statement : QUESTION_MINUS term_list DOT
  24            | term COLON_MINUS term_list DOT
  25            | term DOT

  26  statement_list_rev :
  27                     | statement_list_rev statement

  28  statement_list : statement_list_rev

  29  program : statement_list EOF

  30  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (30)
	statement_list_rev : .  (26)

	.  reduce 26

	program  goto 3
	statement_list_rev  goto 4
	statement_list  goto 5


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (30)

	.  reduce 30


state 4
	statement_list_rev : statement_list_rev . statement  (27)
	statement_list : statement_list_rev .  (28)

	INT  shift 6
	FLOAT  shift 7
	STRING  shift 8
	ATOM  shift 9
	BOOL  shift 10
	VAR  shift 11
	QUESTION_MINUS  shift 12
	MINUS  shift 13
	PLUS  shift 14
	EOF  reduce 28

	constant  goto 15
	statement  goto 16
	term  goto 17
	structure  goto 18
	add_sym  goto 19
	term_simple  goto 20
	term_mult  goto 21
	term_neg  goto 22


state 5
	program : statement_list . EOF  (29)

	EOF  shift 23
	.  error


state 6
	constant : INT .  (5)

	.  reduce 5


state 7
	constant : FLOAT .  (6)

	.  reduce 6


state 8
	constant : STRING .  (7)

	.  reduce 7


state 9
	structure : ATOM . LPAREN RPAREN  (9)
	structure : ATOM . LPAREN term_list RPAREN  (10)
	term_simple : ATOM .  (12)

	LPAREN  shift 24
	COLON_MINUS  reduce 12
	DOT  reduce 12
	RPAREN  reduce 12
	COMMA  reduce 12
	MINUS  reduce 12
	PLUS  reduce 12
	MULT  reduce 12
	DIV  reduce 12


state 10
	constant : BOOL .  (8)

	.  reduce 8


state 11
	term_simple : VAR .  (13)

	.  reduce 13


state 12
	statement : QUESTION_MINUS . term_list DOT  (23)

	INT  shift 6
	FLOAT  shift 7
	STRING  shift 8
	ATOM  shift 9
	BOOL  shift 10
	VAR  shift 11
	MINUS  shift 13
	PLUS  shift 14
	.  error

	constant  goto 15
	term  goto 25
	structure  goto 18
	term_list  goto 26
	add_sym  goto 19
	term_simple  goto 20
	term_mult  goto 21
	term_neg  goto 22


state 13
	add_sym : MINUS .  (2)

	.  reduce 2


state 14
	add_sym : PLUS .  (1)

	.  reduce 1


state 15
	term_simple : constant .  (11)

	.  reduce 11


state 16
	statement_list_rev : statement_list_rev statement .  (27)

	.  reduce 27


state 17
	statement : term . COLON_MINUS term_list DOT  (24)
	statement : term . DOT  (25)

	COLON_MINUS  shift 27
	DOT  shift 28
	.  error


state 18
	term_simple : structure .  (14)

	.  reduce 14


state 19
	term_neg : add_sym . term_neg  (19)

	INT  shift 6
	FLOAT  shift 7
	STRING  shift 8
	ATOM  shift 9
	BOOL  shift 10
	VAR  shift 11
	MINUS  shift 13
	PLUS  shift 14
	.  error

	constant  goto 15
	structure  goto 18
	add_sym  goto 19
	term_simple  goto 20
	term_neg  goto 29


state 20
	term_neg : term_simple .  (20)

	.  reduce 20


state 21
	term : term_mult . add_sym term  (15)
	term : term_mult .  (16)

	MINUS  shift 13
	PLUS  shift 14
	COLON_MINUS  reduce 16
	DOT  reduce 16
	RPAREN  reduce 16
	COMMA  reduce 16

	add_sym  goto 30


state 22
	term_mult : term_neg . mult_sym term_mult  (17)
	term_mult : term_neg .  (18)

	MULT  shift 31
	DIV  shift 32
	COLON_MINUS  reduce 18
	DOT  reduce 18
	RPAREN  reduce 18
	COMMA  reduce 18
	MINUS  reduce 18
	PLUS  reduce 18

	mult_sym  goto 33


state 23
	program : statement_list EOF .  (29)

	.  reduce 29


state 24
	structure : ATOM LPAREN . RPAREN  (9)
	structure : ATOM LPAREN . term_list RPAREN  (10)

	INT  shift 6
	FLOAT  shift 7
	STRING  shift 8
	ATOM  shift 9
	BOOL  shift 10
	VAR  shift 11
	RPAREN  shift 34
	MINUS  shift 13
	PLUS  shift 14
	.  error

	constant  goto 15
	term  goto 25
	structure  goto 18
	term_list  goto 35
	add_sym  goto 19
	term_simple  goto 20
	term_mult  goto 21
	term_neg  goto 22


state 25
	term_list : term .  (21)
	term_list : term . COMMA term_list  (22)

	COMMA  shift 36
	DOT  reduce 21
	RPAREN  reduce 21


state 26
	statement : QUESTION_MINUS term_list . DOT  (23)

	DOT  shift 37
	.  error


state 27
	statement : term COLON_MINUS . term_list DOT  (24)

	INT  shift 6
	FLOAT  shift 7
	STRING  shift 8
	ATOM  shift 9
	BOOL  shift 10
	VAR  shift 11
	MINUS  shift 13
	PLUS  shift 14
	.  error

	constant  goto 15
	term  goto 25
	structure  goto 18
	term_list  goto 38
	add_sym  goto 19
	term_simple  goto 20
	term_mult  goto 21
	term_neg  goto 22


state 28
	statement : term DOT .  (25)

	.  reduce 25


state 29
	term_neg : add_sym term_neg .  (19)

	.  reduce 19


state 30
	term : term_mult add_sym . term  (15)

	INT  shift 6
	FLOAT  shift 7
	STRING  shift 8
	ATOM  shift 9
	BOOL  shift 10
	VAR  shift 11
	MINUS  shift 13
	PLUS  shift 14
	.  error

	constant  goto 15
	term  goto 39
	structure  goto 18
	add_sym  goto 19
	term_simple  goto 20
	term_mult  goto 21
	term_neg  goto 22


state 31
	mult_sym : MULT .  (3)

	.  reduce 3


state 32
	mult_sym : DIV .  (4)

	.  reduce 4


state 33
	term_mult : term_neg mult_sym . term_mult  (17)

	INT  shift 6
	FLOAT  shift 7
	STRING  shift 8
	ATOM  shift 9
	BOOL  shift 10
	VAR  shift 11
	MINUS  shift 13
	PLUS  shift 14
	.  error

	constant  goto 15
	structure  goto 18
	add_sym  goto 19
	term_simple  goto 20
	term_mult  goto 40
	term_neg  goto 22


state 34
	structure : ATOM LPAREN RPAREN .  (9)

	.  reduce 9


state 35
	structure : ATOM LPAREN term_list . RPAREN  (10)

	RPAREN  shift 41
	.  error


state 36
	term_list : term COMMA . term_list  (22)

	INT  shift 6
	FLOAT  shift 7
	STRING  shift 8
	ATOM  shift 9
	BOOL  shift 10
	VAR  shift 11
	MINUS  shift 13
	PLUS  shift 14
	.  error

	constant  goto 15
	term  goto 25
	structure  goto 18
	term_list  goto 42
	add_sym  goto 19
	term_simple  goto 20
	term_mult  goto 21
	term_neg  goto 22


state 37
	statement : QUESTION_MINUS term_list DOT .  (23)

	.  reduce 23


state 38
	statement : term COLON_MINUS term_list . DOT  (24)

	DOT  shift 43
	.  error


state 39
	term : term_mult add_sym term .  (15)

	.  reduce 15


state 40
	term_mult : term_neg mult_sym term_mult .  (17)

	.  reduce 17


state 41
	structure : ATOM LPAREN term_list RPAREN .  (10)

	.  reduce 10


state 42
	term_list : term COMMA term_list .  (22)

	.  reduce 22


state 43
	statement : term COLON_MINUS term_list DOT .  (24)

	.  reduce 24


21 terminals, 15 nonterminals
31 grammar rules, 44 states
